<resources>
    <string name="app_name">LaoShiFu</string>
    <string name="action_settings">Settings</string>
    <string name="hint_phone">请输入你的手机号</string>
    <string name="hint_password">请输入密码</string>
    <string name="welcomeText">欢迎使用老司机</string>
    <string name="login">登录</string>
    <string name="userNameLabel">用户名:</string>
    <string name="userPasswordLabel">密 码:</string>
    <string name="toRegister">我要注册</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="getVerifyCode">获取验证码</string>
    <string name="verifyCode">短信验证码</string>



</resources>
