<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f9"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="60dp"
            android:paddingTop="60dp"
            android:text="@string/welcomeText"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/user_phone"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="left"
            android:background="#ffffff"
            android:textSize="20sp"
            android:textColor="#dadada"
            android:hint="@string/hint_phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/user_password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="left"
            android:background="#ffffff"
            android:textColor="#dadada"
            android:textSize="20sp"
            android:hint="@string/hint_password" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:gravity="center">
        <Button
            android:id="@+id/button_login"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:width="100dp"
            android:textSize="20sp"
            android:text="@string/login" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="40dp">
        <TextView
            android:id="@+id/registerLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/toRegister"
            android:gravity="center"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/forgetPwdLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/forgetPassword"
            android:gravity="center"
            android:textSize="20sp"/>
    </LinearLayout>
</LinearLayout>



